add proxy: jdk and cglib